--- a/css-basics_pink-box/css/styles.css
+++ b/css-basics_pink-box/css/styles.css
@@ -1,25 +1,30 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 body {
-  font-family: system-ui;
+   font-family: system-ui;
 }
 
 /* Put a selector here to select div elements (see index.html). */
-SELECTOR HERE {
-  font-family: cursive;
-  padding: 8px;
+div {
+   font-family: cursive;
+   padding: 8px;
 
-  /* Set the height and the width of the box to 150px. */
+   /* Set the height and the width of the box to 150px. */
+   height: 150px;
+   width: 150px;
 
-  /* Make the background color "hotpink". */
+   /* Make the background color "hotpink". */
+   background: hotpink;
 
-  /* Make the text color "white". */
+   /* Make the text color "white". */
+   color: white;
 
-  /* Can you give the box round edges with a radius of 8px? */
+   /* Can you give the box round edges with a radius of 8px? */
+   border-radius: 9px;
 
-  /* ✨ Feel free to experiment! */
+   /* ✨ Feel free to experiment! */
 }
