--- a/css-basics_pseudo-park/css/styles.css
+++ b/css-basics_pseudo-park/css/styles.css
@@ -9,34 +9,50 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 .park {
-  margin: 16px;
-  border: 2px dashed silver;
-  overflow: hidden;
-  border-radius: 8px;
-  background-color: lightgoldenrodyellow;
+   margin: 16px;
+   border: 2px dashed silver;
+   overflow: hidden;
+   border-radius: 8px;
+   background-color: lightgoldenrodyellow;
 }
 
 .animal {
-  padding: 16px;
+   padding: 16px;
 
-  /*
+   /*
     The animals are very small.
     The size of the emojis is controlled via the font size.
     Set the font size to 32px.
   */
+   font-size: 32px;
 }
 
 /*
   The giraffe is afraid of the crocodile and the dino.
-   - Center the giraffe in the park.
-   - Align the dino to the right.
-
+  - Center the giraffe in the park.
+  - Align the dino to the right.
+  
   💡 Select the animals by their class names and use the text-align property.
-*/
+  */
+.giraffe {
+   text-align: center;
+}
+.giraffe:hover {
+   background: lightgreen;
+}
+.dino {
+   text-align: right;
+}
+.dino:hover {
+   background: lightsalmon;
+}
+.crocodile:hover {
+   background: lightblue;
+}
 
 /* 
   The animals want some color! 🎨
