--- a/css-positioning_absolute-position/css/styles.css
+++ b/css-positioning_absolute-position/css/styles.css
@@ -24,6 +24,7 @@ main {
   height: 80px;
   width: 80px;
   text-align: center;
+  position: absolute;
 }
 
 /**
@@ -37,28 +38,45 @@ main {
 
 .box--top-left {
   background-color: #aed6f1;
+  z-index: 1;
+  left: 0;
+  top: 0;
 }
 
 .box--top-center {
   background-color: #85c1e9;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .box--top-right {
   background-color: #5dade2;
+  right: 0;
+  top: 0;
 }
 
 .box--center {
   background-color: #3498db;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .box--bottom-left {
   background-color: #2874a6;
+  bottom: 0;
+  left: 0;
 }
 
 .box--bottom-center {
   background-color: #21618c;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .box--bottom-right {
   background-color: #1b4f72;
+  right: 0;
+  bottom: 0;
 }
