--- a/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning_layout-with-position/css/styles.css
@@ -1,14 +1,14 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  margin: 80px 0 45px 0;
-  font-family: system-ui;
+   display: flex;
+   flex-direction: column;
+   margin: 80px 0 45px 0;
+   font-family: system-ui;
 }
 
 /**
@@ -17,19 +17,22 @@ body {
  * document is scrolled.
  */
 .header {
-  background: #140523;
-  color: #ffffff;
-  height: 80px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
-  padding: 10px;
+   background: #140523;
+   color: #ffffff;
+   height: 100px;
+   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+   padding: 10px;
+   position: fixed;
+   top: 0;
+   width: 100%;
 }
 
 .header__text {
-  color: #ff4a11;
+   color: #ff4a11;
 }
 
 .header__heading {
-  margin: 0;
+   margin: 0;
 }
 
 /**
@@ -38,9 +41,12 @@ body {
  * document is scrolled.
  */
 .footer {
-  background: #140523;
-  color: #ffffff;
-  height: 48px;
+   background: #140523;
+   color: #ffffff;
+   height: 48px;
+   position: fixed;
+   bottom: 0;
+   width: 100%;
 }
 
 /**
@@ -48,26 +54,30 @@ body {
  * Define the card as the reference frame for its descendant elements that require absolute positioning.
  */
 .card {
-  margin: 20px 10%;
-  border: 5px solid #252629;
-  padding: 3% 10%;
-  scroll-margin-top: 100px;
-  border-radius: 2rem;
+   margin: 20px 10%;
+   border: 5px solid #252629;
+   padding: 3% 10%;
+   scroll-margin-top: 100px;
+   border-radius: 2rem;
+   position: relative;
 }
 
 .card__heading {
-  margin: 0 0 10px 0;
+   margin: 0 0 10px 0;
 }
 
 /**
  * Place the bookmark in the top-right corner of each card.
  */
 .card__bookmark {
-  border: 2px solid #ff4a11;
-  font-size: 2em;
-  padding: 6px 12px;
-  border-radius: 50%;
-  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+   border: 2px solid #ff4a11;
+   font-size: 2em;
+   padding: 6px 12px;
+   border-radius: 50%;
+   box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+   position: absolute;
+   right: 0;
+   top: 0;
 }
 
 /**
@@ -75,16 +85,19 @@ body {
  * and remains fixed in place when the document is scrolled.
  */
 .goto-top {
-  width: 48px;
-  height: 48px;
-  padding: 8px;
-  border-radius: 50%;
-  background: #ff4a11;
-  color: white;
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
-  text-decoration: none;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+   width: 48px;
+   height: 48px;
+   padding: 8px;
+   border-radius: 50%;
+   background: #ff4a11;
+   color: white;
+   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+   text-decoration: none;
+   flex-shrink: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   position: fixed;
+   bottom: 80px;
+   left: 20px;
 }
