--- a/css-structure_custom-properties/css/styles.css
+++ b/css-structure_custom-properties/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-   --color-granite: rgb(37 38 41 / 100%);
+   --color-granite: #252629;
    --color-nemo: #ff4a11;
    --color-foam: white;
 }
