--- a/js-functions/js-functions_progress-bar/css/styles.css
+++ b/js-functions/js-functions_progress-bar/css/styles.css
@@ -8,6 +8,7 @@ body {
    margin: 0;
    font-family: system-ui;
    background-color: #f5f5fd;
+   background-color: blue;
    padding: 100px 0;
 }
 
@@ -18,13 +19,15 @@ img {
    border-radius: 14px;
    border: 4px solid white;
    overflow: hidden;
+   background: grey;
 }
 
 .image-container {
    display: grid;
    place-items: center;
    gap: 20px;
-   padding: 20px 0;
+   padding: 80px 0;
+   background: yellow;
 }
 
 nav {
